changed include to render on simple compnents, updated readme with SSL cheat

--- a/src/components/layout/theme.liquid
+++ b/src/components/layout/theme.liquid
@@ -30,7 +30,7 @@
 
   {%- comment -%}Varibles{%- endcomment -%}
   {{ content_for_header }}
-  {% include 'global-css' %}
+  {% render 'global-css' %}
 
   {{ 'tailwind.min.css' | asset_url | stylesheet_tag }}
   {{ 'bundle.global-css.css' | asset_url | stylesheet_tag }}
