--- a/src/components/sections/product/product.liquid
+++ b/src/components/sections/product/product.liquid
@@ -52,7 +52,7 @@
             </div>
           </div>
           <div class="mt-3 pb-5 border-b-2 border-gray-200 mb-5">
-            {% include 'input-counter' %}
+            {% render 'input-counter' %}
           </div>
           <div class="flex">
             <span
