--- a/src/components/sections/banner-with-text/banner-with-text.liquid
+++ b/src/components/sections/banner-with-text/banner-with-text.liquid
@@ -1,6 +1,6 @@
-<section class="banner_image relative flex flex-col" data-section-id="{{ section.id }}">
+<section class="relative flex flex-col banner_image" data-section-id="{{ section.id }}">
     {%- if section.settings.image != blank -%}
-    <picture class="ratio-16/9 object-cover w-full">
+    <picture class="object-cover w-full ratio-16/9">
       <source media="(max-width: 375px)" srcset="{{ section.settings.image | img_url: '375x' }}, {{ section.settings.image | img_url: '375x', scale: 2 }} 2x">
       <source media="(max-width: 768px)" srcset="{{ section.settings.image | img_url: '768x' }}, {{ section.settings.image | img_url: '768x', scale: 2 }} 2x">
       <img class="w-full" src="{{ section.settings.image | img_url: '1200x' }}"
@@ -12,16 +12,16 @@
       <img src="https://picsum.photos/1200/600" alt="placeholder image">
     {%- endif -%}
     {%- if section.settings.overlay -%}
-      <div class="absolute bg-black opacity-50 top-0 right-0 bottom-0 left-0"></div>
+      <div class="absolute top-0 bottom-0 left-0 right-0 bg-black opacity-50"></div>
     {%- endif -%}
-    <div class="banner_title text-white p-8 absolute inset-0 flex flex-col items-center justify-center text-center">
+    <div class="absolute inset-0 flex flex-col items-center justify-center p-8 text-center text-white banner_title">
       <h1 class="text-2xl sm:text-6xl">{{ section.settings.title }}</h1>
       <p class="text-base sm:text-4xl">{{ section.settings.text }}</p>
       {%- if section.blocks -%}
         <div class="flex flex-row flex-wrap justify-center mt-8">
           {%- for block in section.blocks -%}
           <a href="{{ block.settings.link }}">
-            <button class="bg-blue-500 hover:bg-blue-700 py-2 px-4 mx-2 rounded">{{ block.settings.text }}</button>
+            <button class="px-4 py-2 mx-2 bg-blue-500 rounded hover:bg-blue-700">{{ block.settings.text }}</button>
           </a>
           {%- endfor -%}
         </div>
